# LightTrack_openvino

./: .gitignore  README.md  requirements.txt
Cpp_Infer/: CMakeLists.txt  Tracker.cpp  Tracker.hpp  main.cpp
Python_infer/: LightTack.py  infer.py  utils.py
models/: README.md  head.xml  x_feature.xml  z_feature.xml
tools/: export_onnx.py  save_ir.py
